<!-- Your modified layout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="704dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-12dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNameOfHike"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Enter name"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editLocation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Enter your location"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textSize="18dp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TextView
            android:id="@+id/textViewParking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/parking"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupParking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButtonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/length"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editLengthOfHike"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Enter length of hike"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/difficulty"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:entries="@array/LevelDifficult" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Enter your description"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
