<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddObservation">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="703dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407">

        <TextView
            android:id="@+id/observationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observation_text"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editObservationText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Enter text"
            android:inputType="text" />

        <TextView
            android:id="@+id/observationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/observation_time"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/observationSelectedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="Selected time"
                android:textSize="18dp" />

            <Button
                android:id="@+id/buttonSelectedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#61D6BCBC"
                android:outlineProvider="none"
                android:text="Choose Time"
                android:textColor="#040404"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/observationComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observation_text"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editObservationComment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Enter comment"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/buttonBackToDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="Back"
                android:backgroundTint="@color/gray"/>
            <Button
                android:id="@+id/buttonAddObs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/button" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>